kubernetes/apps/base/authentik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: force-https-proto
  namespace: authentik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
