kubernetes/apps/base/authentik/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`authentik.${cluster_domain}`)
      kind: Rule
      middlewares:
        - name: force-https-proto
      services:
        - name: authentik-server
          port: 80
