kubernetes/apps/base/authentik/outpost-paths.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forwardauth-outpost-paths
  namespace: authentik
spec:
  entryPoints:
    - web
  routes:
    - match: (Host(`firefox.${hidden_domain}`) || Host(`files.${hidden_domain}`)) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
